Modified to be compatible with JDK 17